final updates + archive

--- a/archive/context_distillation.ipynb
+++ b/archive/context_distillation.ipynb
@@ -26,7 +26,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'premise': 'The athletes introduced the tourist .',\n",
+       " 'hypothesis': 'The tourist introduced the athletes .',\n",
+       " 'label': 1,\n",
+       " 'parse_premise': '(ROOT (S (NP (DT The) (NNS athletes)) (VP (VBD introduced) (NP (DT the) (NN tourist))) (. .)))',\n",
+       " 'parse_hypothesis': '(ROOT (S (NP (DT The) (NN tourist)) (VP (VBD introduced) (NP (DT the) (NNS athletes))) (. .)))',\n",
+       " 'binary_parse_premise': '( ( The athletes ) ( ( introduced ( the tourist ) ) . ) )',\n",
+       " 'binary_parse_hypothesis': '( ( The tourist ) ( ( introduced ( the athletes ) ) . ) )',\n",
+       " 'heuristic': 'lexical_overlap',\n",
+       " 'subcase': 'ln_subject/object_swap',\n",
+       " 'template': 'temp1'}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hans[\"train\"][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,27 +112,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'yes' token id: 10932\n",
-      "'no' token id: 2362\n"
+      "'ĠYes' token id: 3216\n",
+      "'ĠNo' token id: 440\n"
      ]
     }
    ],
    "source": [
-    "yes_id = tokenizer.convert_tokens_to_ids(\"yes\")\n",
-    "no_id = tokenizer.convert_tokens_to_ids(\"no\")\n",
-    "print(f\"'yes' token id: {yes_id}\")\n",
-    "print(f\"'no' token id: {no_id}\")"
+    "yes_id = tokenizer.encode(\" Yes\", add_special_tokens=False)[0]\n",
+    "no_id = tokenizer.encode(\" No\", add_special_tokens=False)[0]\n",
+    "print(f\"'{tokenizer.convert_ids_to_tokens(yes_id)}' token id: {yes_id}\")\n",
+    "print(f\"'{tokenizer.convert_ids_to_tokens(no_id)}' token id: {no_id}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## IN-CONTEXT LEARNING CODE ##\n",
+    "def create_few_shot_context(train_examples, context_indices):\n",
+    "    context = \"\"\n",
+    "    for idx in context_indices:\n",
+    "        example = train_examples[int(idx)]\n",
+    "        label_text = \"True\" if example[\"label\"] == 0 else \"False\"\n",
+    "        context += f\"{example['premise']}\\nQuestion: {example['hypothesis']} True or False?\\nAnswer: {label_text}\\n\\n\"\n",
+    "\n",
+    "    return context"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_size = 100\n",
+    "few_shot_size = 6\n",
+    "np.random.seed(seed)\n",
+    "selected_idx = np.random.choice(len(mnli[\"train\"]), train_size + few_shot_size, replace=False)\n",
+    "mnli_few_shot = mnli[\"train\"].select(selected_idx[train_size:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bffccdcf323543d6ba3fb2f2341c074a",
+       "model_id": "00d29a80579e4a14bcce347f51e26104",
        "version_major": 2,
        "version_minor": 0
       },
@@ -117,7 +176,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "734056e36ef9466887d985fabcdd5c07",
+       "model_id": "64472c8864d54a219110cd5d868778c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -131,7 +190,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7a007a820a24a958d6a44fe2417b5a5",
+       "model_id": "d4e34e8eb9bf47fb875615be32ffe80e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -145,7 +204,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f8d177ebad54e139f159bf408ac1f78",
+       "model_id": "28d5ef67eae04ed3834a9d16fbaa0d6d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -159,7 +218,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0050fbbb9d2145d18a2b7c96f3143b49",
+       "model_id": "937618d231cd4d1b9a1be8247e1b9305",
        "version_major": 2,
        "version_minor": 0
       },
@@ -172,50 +231,99 @@
     }
    ],
    "source": [
-    "task_context = \"Given the premise and hypothesis: reply yes if the premise entails the hypothesis, or no otherwise\"\n",
+    "task_context = \"Given the premise and hypothesis, does the premise entail the hypothesis?\"\n",
+    "task_suffix = \"Yes or No? Answer:\"\n",
     "\n",
-    "def generate_mnli_prompts(examples):\n",
+    "def generate_mnli_prompts(examples, demonstrations):\n",
     "    # teacher model receives task context + premise + hypothesis\n",
-    "    examples[\"teacher_prompt\"] = f\"{task_context}\\nPremise: {examples['premise']}\\nHypothesis: {examples['hypothesis']}\"\n",
+    "    examples[\"teacher_prompt\"] = f\"{task_context}\\n{demonstrations}Premise: {examples['premise']}\\nHypothesis: {examples['hypothesis']}\\n{task_suffix}\"\n",
     "    # student model only receives premise + hypothesis\n",
-    "    examples[\"student_prompt\"] = f\"Premise: {examples['premise']}\\nHypothesis: {examples['hypothesis']}\"\n",
+    "    examples[\"student_prompt\"] = f\"{examples['premise']}\\n{examples['hypothesis']}\\n{task_suffix}\"\n",
     "    return examples\n",
     "\n",
-    "mnli = mnli.map(generate_mnli_prompts)\n"
+    "demonstrations = create_few_shot_context(mnli_few_shot)\n",
+    "mnli = mnli.map(generate_mnli_prompts, fn_kwargs={\"demonstrations\": demonstrations})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Given the premise and hypothesis, does the premise entail the hypothesis?\n",
+      "Premise: yeah that'll be nice i mean that that i think tends to just keep i think stadiums have worked tend to keep people happy\n",
+      "Hypothesis: I think that stadiums want to keep people happy.\n",
+      "Yes or No? Answer: Yes\n",
+      "\n",
+      "Premise: oh i bet it doesn't mix well does it\n",
+      "Hypothesis: I bet it doesn't mix well, does it?\n",
+      "Yes or No? Answer: Yes\n",
+      "\n",
+      "Premise: Their applicability to case study evaluations outside of settings such as GAO is being explored.\n",
+      "Hypothesis: They are exploring the applicability to case study evaluations outside of settings, for example GAO.\n",
+      "Yes or No? Answer: Yes\n",
+      "\n",
+      "Premise: However, there are numerous policy, technical, legal, and human resource issues that are not fully within the control of officials at individual agencies.\n",
+      "Hypothesis: Every issue can be controlled.\n",
+      "Yes or No? Answer: No\n",
+      "\n",
+      "Premise: The gaudy red, gold, and white Sam Po Kong Temple stands at the foot of Bukit China, honoring Cheng Ho, the eunuch admiral who in 1409 opened up Melaka to Chinese trade.\n",
+      "Hypothesis: Cheng Ho is an admiral who opened Melaka to Chinese trade.\n",
+      "Yes or No? Answer: Yes\n",
+      "\n",
+      "Premise: However, legend says that, just as the executioner raised his sword, a lightning bolt struck and broke it in two.\n",
+      "Hypothesis: According to legend, the executioner never picked a sword in his life.\n",
+      "Yes or No? Answer: No\n",
+      "\n",
+      "Premise: One of our number will carry out your instructions minutely.\n",
+      "Hypothesis: A member of my team will execute your orders with immense precision.\n",
+      "Yes or No? Answer:\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mnli[\"train\"][1][\"teacher_prompt\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_size = 20\n",
-    "np.random.seed(seed)\n",
-    "selected_idx = np.random.choice(1000, train_size)\n",
-    "\n",
-    "mnli_train = mnli[\"train\"].select(selected_idx)\n",
+    "mnli_train = mnli[\"train\"].select(selected_idx[:train_size])\n",
     "labels_train = torch.tensor(mnli_train[\"label\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3ad6922e7164d60b2bca8b02f1e641e",
+       "model_id": "0baf887e426948f9920ca9bb378aeaa7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map:   0%|          | 0/20 [00:00<?, ? examples/s]"
+       "Map:   0%|          | 0/100 [00:00<?, ? examples/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Asking to truncate to max_length but no maximum length is provided and the model has no predefined maximum length. Default to no truncation.\n"
+     ]
     }
    ],
    "source": [
@@ -230,26 +338,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = \"cpu\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5"
+       "0.36000001430511475"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "input_ids = tokenized_teacher_mnli_train[\"input_ids\"]\n",
-    "attention_mask = tokenized_teacher_mnli_train[\"attention_mask\"]\n",
+    "input_ids = tokenized_teacher_mnli_train[\"input_ids\"].to(device)\n",
+    "attention_mask = tokenized_teacher_mnli_train[\"attention_mask\"].to(device)\n",
     "teacher_model.eval()\n",
     "\n",
+    "teacher_model.to(device)\n",
     "outputs = teacher_model(input_ids=input_ids, attention_mask=attention_mask)\n",
     "\n",
     "logits = outputs.logits\n",
@@ -258,6 +375,26 @@
     "teacher_pred = logits[:, -1, [yes_id, no_id]].argmax(dim=-1)\n",
     "teacher_acc = (teacher_pred == labels_train).float().mean().item()\n",
     "teacher_acc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([0, 1]), tensor([36, 64]))"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.unique(labels_train, return_counts=True)"
    ]
   },
   {
@@ -666,20 +803,6 @@
     "loss, acc = evaluate_model(student_model, tokenized_outdomain, outdomain_labels)\n",
     "print(f\"Out-domain Accuracy: {acc:.4f}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
